@@ -206,7 +206,7 @@
 		<dependency>
 			<groupId>de.ids_mannheim.korap</groupId>
 			<artifactId>Kustvakt-core</artifactId>
-			<version>[0.61.4,)</version>
+			<version>[0.61.6,)</version>
 		</dependency>
 		<!-- LDAP -->
 		<dependency>
