@@ -137,7 +137,7 @@
 		<dependency>
 			<groupId>de.ids_mannheim.korap</groupId>
 			<artifactId>Kustvakt-core</artifactId>
-			<version>[0.61.3,)</version>
+			<version>[0.61.6,)</version>
 		</dependency>
 		<!-- Jersey test framework -->
 		<dependency>
