@@ -1,6 +1,8 @@
 version 0.61.3
 05/02/2019
-  - Updated kustvakt-lite.conf
+  - Updated kustvakt-lite.conf (margaretha)
+18/02/2019
+  - Updated core version (margaretha)
 
 version 0.61.2
 14/11/2018
